# resume-rs

./: Cargo.toml  README.md  README_ch.md
example/: Cargo.toml
example/src/: main.rs
src/: education.rs  honor.rs  info.rs  lib.rs  proj.rs  render.rs  skill.rs  work.rs
src/template/: mod.rs  type1.rs
