[package]
name = "resume"
version = "0.1.0"
authors = ["SKTT1Ryze <linuxgnulover@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
latex = { git = "https://github.com/SKTT1Ryze/latex-rs" }
lazy_static = "1.4.0"
