[package]
name = "example"
version = "0.1.0"
authors = ["hustccc <1276675421@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resume = { path = ".." }
lazy_static = "1.4.0"
latex = { git = "https://github.com/SKTT1Ryze/latex-rs"}